<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2017, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
  ~
  ~ WSO2 Inc. licenses this file to you under the Apache License,
  ~ Version 2.0 (the "License"); you may not use this file except
  ~ in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>org.wso2.ei</groupId>
        <artifactId>org.wso2.carbon.ei.tests.platform</artifactId>
        <version>6.5.0-m3-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>org.wso2.carbon.ei.tests.platform.rabbitmq</artifactId>
    <name>EI test Module - Platform - RabbitMQ Transport</name>
    <packaging>jar</packaging>

    <dependencies>
        <dependency>
            <groupId>org.wso2.ei</groupId>
            <artifactId>admin-clients</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.wso2.carbon.mediation</groupId>
                    <artifactId>org.wso2.carbon.rest.api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.wso2.ei</groupId>
            <artifactId>integration-test-utils</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.wso2.carbon.mediation</groupId>
                    <artifactId>org.wso2.carbon.rest.api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.wso2.ei</groupId>
            <artifactId>service-samples</artifactId>
        </dependency>
        <!-- Jacoco Dependency-->
        <dependency>
            <groupId>org.jacoco</groupId>
            <artifactId>org.jacoco.agent</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wso2.ei</groupId>
            <artifactId>automation-extensions</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
                <executions>
                    <execution>
                        <id>default-testCompile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>platform</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>io.fabric8</groupId>
                        <artifactId>docker-maven-plugin</artifactId>
                        <configuration>
                            <logDate>default</logDate>
                            <autoPull>true</autoPull>
                            <images>
                                <image>
                                    <alias>rabbitmq</alias>
                                    <name>rabbitmq:3</name>
                                    <run>
                                        <ports>
                                            <port>5672:5672</port>
                                        </ports>
                                        <wait>
                                            <tcp>
                                                <ports>
                                                    <port>5672</port>
                                                </ports>
                                            </tcp>
                                            <time>60000</time>
                                        </wait>
                                    </run>
                                </image>
                            </images>
                        </configuration>
                        <executions>
                            <execution>
                                <id>start</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>start</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>stop</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>stop</goal>
                                    <goal>remove</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <inherited>false</inherited>
                        <configuration>
                            <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>
                            <disableXmlReport>false</disableXmlReport>
                            <parallel>false</parallel>
                            <suiteXmlFiles>
                                <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                            </suiteXmlFiles>
                            <systemPropertyVariables>
                                <property>
                                    <name>framework.resource.location</name>
                                    <value>${basedir}/src/test/resources/</value>
                                </property>
                                <framework.resource.location>${basedir}/src/test/resources/
                                </framework.resource.location>
                                <server.list>ESB</server.list>
                                <usedefaultlisteners>false</usedefaultlisteners>
                                <sec.verifier.dir>${basedir}/target/security-verifier/</sec.verifier.dir>
                                <maven.test.haltafterfailure>false</maven.test.haltafterfailure>
                                <carbon.zip>
                                    ${basedir}/../../../../distribution/target/wso2ei-${product.ei.version}.zip
                                </carbon.zip>
                                <instr.file>${basedir}/../../coverage-report/instrumentation.txt</instr.file>
                                <filters.file>${basedir}/../../coverage-report/filters.txt</filters.file>
                            </systemPropertyVariables>
                            <workingDirectory>${basedir}/target</workingDirectory>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>copy-jacoco-dependencies</id>
                                <phase>compile</phase>
                                <goals>
                                    <goal>copy-dependencies</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${project.build.directory}/jacoco</outputDirectory>
                                    <includeTypes>jar</includeTypes>
                                    <includeArtifactIds>org.jacoco.agent</includeArtifactIds>
                                </configuration>
                            </execution>
                            <execution>
                                <id>copy-secVerifier</id>
                                <phase>compile</phase>
                                <goals>
                                    <goal>copy-dependencies</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${basedir}/target/security-verifier</outputDirectory>
                                    <includeTypes>aar</includeTypes>
                                    <includeArtifactIds>SecVerifier</includeArtifactIds>
                                    <stripVersion>true</stripVersion>
                                </configuration>
                            </execution>
                            <execution>
                                <id>unpack-mar-jks</id>
                                <phase>compile</phase>
                                <goals>
                                    <goal>unpack</goal>
                                </goals>
                                <configuration>
                                    <artifactItems>
                                        <artifactItem>
                                            <groupId>org.wso2.ei</groupId>
                                            <artifactId>wso2ei</artifactId>
                                            <version>${product.ei.version}</version>
                                            <type>zip</type>
                                            <overWrite>true</overWrite>
                                            <outputDirectory>${basedir}/target/tobeCopied/</outputDirectory>
                                            <includes>**/*.jks,**/*.mar,**/synapse_sample*.xml</includes>
                                        </artifactItem>
                                    </artifactItems>
                                </configuration>
                            </execution>

                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <version>2.4</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>test-jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-resources-plugin</artifactId>
                        <version>2.6</version>
                        <executions>
                            <execution>
                                <id>copy-resources-jks</id>
                                <phase>compile</phase>
                                <goals>
                                    <goal>copy-resources</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${basedir}/src/test/resources/keystores/products
                                    </outputDirectory>
                                    <resources>
                                        <resource>
                                            <directory>
                                                ${basedir}/target/tobeCopied/wso2ei-${product.ei.version}/repository/resources/security/
                                            </directory>
                                            <includes>
                                                <include>**/*.jks</include>
                                            </includes>
                                        </resource>
                                    </resources>
                                </configuration>
                            </execution>
                            <execution>
                                <id>copy-stratos-jks</id>
                                <phase>compile</phase>
                                <goals>
                                    <goal>copy-resources</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${basedir}/src/test/resources/keystores/stratos
                                    </outputDirectory>
                                    <resources>
                                        <resource>
                                            <directory>
                                                ${basedir}/target/tobeCopied/wso2ei-${product.ei.version}/repository/resources/security/
                                            </directory>
                                            <includes>
                                                <include>**/*.jks</include>
                                            </includes>
                                        </resource>
                                    </resources>
                                </configuration>
                            </execution>
                            <execution>
                                <id>copy-sample-jks</id>
                                <phase>compile</phase>
                                <goals>
                                    <goal>copy-resources</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${basedir}/src/test/resources/keystores/products
                                    </outputDirectory>
                                    <resources>
                                        <resource>
                                            <directory>
                                                ${basedir}/target/tobeCopied/wso2ei-${product.ei.version}/samples/service-bus/resources/security/
                                            </directory>
                                            <includes>
                                                <include>**/*.jks</include>
                                            </includes>
                                        </resource>
                                    </resources>
                                </configuration>
                            </execution>
                            <execution>
                                <id>copy-resources-mar</id>
                                <phase>compile</phase>
                                <goals>
                                    <goal>copy-resources</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${basedir}/src/test/resources/client/modules
                                    </outputDirectory>
                                    <resources>
                                        <resource>
                                            <directory>
                                                ${basedir}/target/tobeCopied/wso2ei-${product.ei.version}/repository/deployment/client/modules
                                            </directory>
                                            <includes>
                                                <include>**/*.mar</include>
                                            </includes>
                                        </resource>
                                    </resources>
                                </configuration>
                            </execution>
                            <execution>
                                <id>copy-samples</id>
                                <phase>compile</phase>
                                <goals>
                                    <goal>copy-resources</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${basedir}/target/ESB/samples/
                                    </outputDirectory>
                                    <resources>
                                        <resource>
                                            <directory>
                                                ${basedir}/target/tobeCopied/wso2ei-${product.ei.version}/samples/service-bus/
                                            </directory>
                                            <includes>
                                                <include>**/*.xml</include>
                                            </includes>
                                        </resource>
                                    </resources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
